--- a/docs/css/custom_list.css
+++ b/docs/css/custom_list.css
@@ -17,12 +17,19 @@ article ul ul ul {
   // width: 75%;
 // }
 
+// new class to set width of table to 75%
+.md-typeset__table {
+  width: 75%;
+}
+
 .md-typeset__table table:not([class]) {
   display: table
 }
 
 .center-table {
   text-align: center;
+  /* width: 75%; */
+  margin: auto;
 }
 
 .md-typeset .center-table :is(td,th):not([align]) {
