ff is boring af

--- a/docs/css/custom_list.css
+++ b/docs/css/custom_list.css
@@ -35,3 +35,8 @@ article ul ul ul {
 .md-typeset .center-table :is(td,th):not([align]) {
   text-align: initial; /* Reset alignment for table cells */
 }
+
+// make title in mermaid diagrams black
+.mermaid {
+  theme: dark
+}
